--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=109.226.37.74;Database=BarIlanBiologyRegistrationQA;User Id=sa;Password=q1w2e3r4A123;TrustServerCertificate=True;Trusted_Connection=False;"
+    "DefaultConnection": "Server=x;Database=BarIlanBiologyRegistrationQA;User Id=;Password=;TrustServerCertificate=True;Trusted_Connection=False;"
   },
   "Smtp": {
     "Server": "smtp.gmail.com",
